--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@trendmicro/react-dropdown": "^0.7.0",
+    "babel-preset-stage-0": "^6.24.1",
     "object-assign": "^4.1.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
