--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hr_dashboard",
+  "name": "demo",
   "version": "1.0.0",
-  "description": "hr dashboard",
+  "description": "demo",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,18 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@trendmicro/react-dropdown": "^0.7.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "object-assign": "^4.1.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^4.4.1",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.3.1",
-    "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.0.1"
+    "react": "^15.6.1"
   },
   "devDependencies": {
+    "babel-preset-stage-0": "^6.24.1",
     "babel": "5.8.34",
     "babel-core": "6.9.1",
     "babel-loader": "6.2.4",
