--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --require ./test/testHelper.js",
-    "start": "./node_modules/.bin/webpack-dev-server --content-base ./dist --inline --hot"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -45,9 +45,5 @@
     "webpack": "1.13.1",
     "webpack-dev-server": "^1.0.0",
     "webpack-stream": "3.2.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+  }
 }
